# DailyFinancialNews

./: .gitignore  README.md  pyproject.toml
config/: sources.yaml
docs/: report_spec.md
src/dailyfinnews/: cli.py  config.py  content.py  market.py  models.py  report.py  storage.py
tests/: test_content.py  test_market.py  test_report.py
